Fix: margin ando gap

--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -90,6 +90,7 @@
 			flex-direction: row;
 			margin: 0;
 			padding: 0;
+			margin-bottom: .375rem;
 			gap: .375rem;
 			&_title {
 				margin: 0;
